[package]
name = "ctxguard"
version = "0.1.0"
edition = "2021"
description = "Context-window budget enforcer for AI coding agents (Claude Code, Codex, Aider)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<you>/ctxguard"
keywords = ["ai", "cli", "claude-code", "token", "budget"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
